<resources>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="action_searching">Search</string>
        <string name="sign_in_to_github">Sign in to GitHub</string>
        <string name="error_orgs_load">Loading account &amp; organizations failed</string>
        <string name="error_issues_load">Loading issues failed</string>
        <string name="error_repos_load">Loading repositories failed</string>
        <string name="error_repo_load">Loading repository failed</string>
        <string name="error_contributors_load">Loading contributors failed</string>
        <string name="error_gist_load">Loading Gist failed</string>
        <string name="error_notifications_load">Loading notifications failed</string>
        <string name="error_news_load">Loading news failed</string>
        <string name="error_followers_load">Loading followers failed</string>
        <string name="error_people_load">Loading people failed</string>
        <string name="error_person_load">Loading person failed</string>
        <string name="error_gist_file_load">Loading Gist file content failed</string>
        <string name="error_gists_load">Loading Gists failed</string>
        <string name="error_issue_load">Loading issue failed</string>
        <string name="error_collaborators_load">Loading collaborators failed</string>
        <string name="error_milestones_load">Loading milestones failed</string>
        <string name="error_labels_load">Loading labels failed</string>
        <string name="error_bookmarks_load">Loading bookmarks failed</string>
        <string name="error_members_load">Loading members failed</string>
        <string name="error_teams_load">Loading teams failed</string>
        <string name="error_commits_load">Loading commits failed</string>
        <string name="error_commit_load">Loading commit failed</string>
        <string name="error_file_load">Loading file failed</string>
        <string name="error_code_load">Loading code failed</string>
        <string name="error_refs_load">Loading branches &amp; tags failed</string>
        <string name="error_following_person">Following failed</string>
        <string name="error_unfollowing_person">Unfollowing failed</string>
        <string name="error_checking_following_status">Checking following status failed</string>
        <string name="error_starring_repository">Starring failed</string>
        <string name="error_unstarring_repository">Unstarring failed</string>
        <string name="error_forking_repository">Forking failed</string>
        <string name="error_checking_starring_status">Checking starring status failed</string>
        <string name="error_rendering_markdown">Rendering markdown failed</string>
        <string name="error_users_search">Searching users failed</string>
        <string name="loading_gist">Loading Gist…</string>
        <string name="random_gist">Loading Random Gist…</string>
        <string name="loading_notifications">Loading Notifications…</string>
        <string name="loading_more_issues">Loading More Issues…</string>
        <string name="loading_issues">Loading Issues…</string>
        <string name="loading_comments">Loading Comments…</string>
        <string name="loading_repositories">Loading Repositories…</string>
        <string name="loading_issue">Loading Issue…</string>
        <string name="loading_news">Loading News…</string>
        <string name="loading_followers">Loading Followers…</string>
        <string name="loading_people">Loading People…</string>
        <string name="loading_gists">Loading Gists…</string>
        <string name="loading_collaborators">Loading Collaborators…</string>
        <string name="loading_milestones">Loading Milestones…</string>
        <string name="loading_labels">Loading Labels…</string>
        <string name="loading_commits">Loading Commits…</string>
        <string name="loading_files_and_comments">Loading Files &amp; Comments…</string>
        <string name="loading_refs">Loading Branches &amp; Tags…</string>
        <string name="no_notifications">No Notifications</string>
        <string name="no_bookmarks">No Bookmarks</string>
        <string name="no_repositories">No Repositories</string>
        <string name="no_contributors">No contributors</string>
        <string name="no_issues">No Issues</string>
        <string name="no_pull_requests">No Pull Requests</string>
        <string name="no_gists">No Gists</string>
        <string name="no_people">No People</string>
        <string name="no_followers">No Followers</string>
        <string name="no_members">No Members</string>
        <string name="no_teams">No Teams</string>
        <string name="no_news">No News</string>
        <string name="no_commits">No Commits</string>
        <string name="updating_assignee">Updating Assignee…</string>
        <string name="updating_issue">Updating Issue…</string>
        <string name="updating_labels">Updating Labels…</string>
        <string name="updating_milestone">Updating Milestone…</string>
        <string name="issue_event_label_assigned">was assigned by %1$s</string>
        <string name="issue_event_label_unassigned">was unassigned by %1$s</string>
        <string name="issue_event_label_self_assigned">self-assigned this</string>
        <string name="issue_event_label_self_unassigned">removed their assignment</string>
        <string name="issue_event_label_added">added the %1$s label</string>
        <string name="issue_event_label_removed">removed the %1$s label</string>
        <string name="issue_event_milestone_added">added this to the %1$s milestone</string>
        <string name="issue_event_milestone_removed">removed this from the %1$s milestone</string>
        <string name="issue_event_merged">merged commit %1$s</string>
        <string name="issue_event_referenced">referenced this issue from commit %1$s</string>
        <string name="issue_event_closed">closed this</string>
        <string name="issue_event_closed_from_commit">closed this from commit %1$s</string>
        <string name="issue_event_reopened">reopened this</string>
        <string name="issue_event_rename">changed the title from %1$s to %2$s</string>
        <string name="issue_event_lock">locked and limited conversation to collaborators</string>
        <string name="issue_event_unlock">unlocked this conversation</string>
        <string name="issue_event_head_ref_deleted">deleted the branch</string>
        <string name="issue_event_head_ref_restored">restored the branch</string>
        <string name="issue_event_comment_diff">commented on the diff</string>
        <string name="app_name">GitHub</string>
        <string name="notification">Notification</string>
        <string name="news">News</string>
        <string name="issues">Issues</string>
        <string name="gists">Gists</string>
        <string name="commits">Commits</string>
        <string name="global_search">GitHub search</string>
        <string name="find_repositories">Find Repositories</string>
        <string name="find_issues">Find Issues</string>
        <string name="search_title">Search…</string>
        <string name="clear_search_history">Clear History</string>
        <string name="search_history_cleared">Search history cleared</string>
        <string name="login_activity_authenticating">Logging in…</string>
        <string name="creating_gist">Creating Gist…</string>
        <string name="create">Create</string>
        <string name="create_gist">Create Gist</string>
        <string name="gist_content_hint">puts \'Hello World!\'</string>
        <string name="make_public">Make this Gist public</string>
        <string name="gist_file_name_hint">file.rb</string>
        <string name="gist">Gist</string>
        <string name="comments">Comments</string>
        <string name="files">Files</string>
        <string name="open">Open</string>
        <string name="random">Random</string>
        <string name="file_name">File Name</string>
        <string name="file_content">File Content</string>
        <string name="new_gist">New Gist</string>
        <string name="filter">Filter</string>
        <string name="bookmark">Bookmark</string>
        <string name="comment">Comment</string>
        <string name="delete">Delete</string>
        <string name="refresh">Refresh</string>
        <string name="dashboard_issues_title">Issue Dashboard</string>
        <string name="bookmarks">Bookmarks</string>
        <string name="report_issue">Report an issue</string>
        <string name="gists_title">Gists</string>
        <string name="issue_title">Issue #</string>
        <string name="pull_request_title">Pull Request #</string>
        <string name="gist_title">Gist\u0020</string>
        <string name="filter_issues_title">Filter Issues</string>
        <string name="filter_pull_requests_title">Filter Pull Requests</string>
        <string name="create_comment_title">Create Comment</string>
        <string name="comment_hint">Enter a comment</string>
        <string name="show_more">Show More…</string>
        <string name="repositories">Repositories</string>
        <string name="contributors">Contributors</string>
        <string name="issues_title">Issues</string>
        <string name="edit_labels">Edit Labels</string>
        <string name="milestone_prefix">Milestone:</string>
        <string name="edit_milestone">Edit Milestone</string>
        <string name="edit_assignee">Edit Assignee</string>
        <string name="description">Description</string>
        <string name="gist_description_hint">Android created Gist</string>
        <string name="title">Title</string>
        <string name="edit">Edit</string>
        <string name="starring_gist">Starring Gist…</string>
        <string name="unstarring_gist">Unstarring Gist…</string>
        <string name="accounts_label">Accounts</string>
        <string name="select_assignee">Select Assignee</string>
        <string name="select_milestone">Select Milestone</string>
        <string name="select_labels">Select Labels</string>
        <string name="select_ref">Select Branch or Tag</string>
        <string name="enter_otp_code_title">Authentication Code</string>
        <string name="enter_otp_code_message">Two-factor authentication is enabled for your account. Enter your authentication code to verify your identity.</string>
        <string name="star_forkhub_dialog_text">If you like this app, please show your appreciation by starring it.</string>
        <string name="no_milestone">No milestone</string>
        <string name="unassigned">No one is assigned</string>
        <string name="assigned">is assigned</string>
        <string name="no_gists_found">No Gists found</string>
        <string name="confirm_gist_delete_title">Confirm Delete</string>
        <string name="confirm_gist_delete_message">Are you sure you want to delete this Gist?</string>
        <string name="deleting_gist">Deleting Gist…</string>
        <string name="creating_comment">Creating comment…</string>
        <string name="editing_comment">Editing comment…</string>
        <string name="deleting_comment">Deleting comment…</string>
        <string name="confirm_comment_delete_title">Remove Comment</string>
        <string name="confirm_comment_delete_message">Are you sure you want to delete this Comment?</string>
        <string name="confirm_bookmark_delete_message">Are you sure you want to remove this bookmark?</string>
        <string name="issue_dashboard">Issue Dashboard</string>
        <string name="new_issue">New Issue</string>
        <string name="anonymous">Anonymous</string>
        <string name="message_filter_saved">Issue filter saved to bookmarks</string>
        <string name="close">Close</string>
        <string name="share">Share</string>
        <string name="open_in_browser">Open in browser</string>
</resources>