<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/m_comment"
        android:icon="@drawable/ic_comment_white_24dp"
        android:title="@string/comment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/m_edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_state"
        android:title="@string/close"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_open_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>