<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/m_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_filter"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_issue"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/m_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/find_issues"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/m_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>