<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sieunhan.github_client.fragment.GistsFragment">

    <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:text="@string/make_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/checkBox3" />
            </RelativeLayout>

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/gist_description_hint"
            android:id="@+id/editText" />

        <TextView
            android:text="@string/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/gist_file_name_hint"
            android:id="@+id/editText1" />

        <TextView
            android:text="@string/file_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/gist_content_hint"
            android:id="@+id/editText2"
            android:layout_weight="0.21" />
        </LinearLayout>
</FrameLayout>
